Finish review tests, begin controller and views.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,6 +28,7 @@ en:
         lname: "Last Name"
       business:
         name: "Business Name"
+        address: "Business Address"
         city_state_zip: "City, State, and Zip"
     errors:
       models:
